Add Hack Day activities to website

--- a/themes/gophercon/layouts/partials/schedule/13july.html
+++ b/themes/gophercon/layouts/partials/schedule/13july.html
@@ -15,37 +15,80 @@
                       </div>
                     </div>
                   </div>
-
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">10:00am - 5:00pm</span>
-                      <span class="location">Hack Rooms</span>
+                      <span class="location">Room: 302</span>
                     </div>
-		    <!-- <div class="col-md-9 schedule-item-details">
-                      <div class="schedule-item-summary">
-                        <span class="title">
-                           Focused Hack Rooms
-                        </span>
-                      </div>
-                      <div class="abstract">
-                        <p>Some of your favorite open source projects and companies will be hosting hack sessions in dedicated rooms.  Join the core teams of great projects like Etcd and Gobot and hack the day away.</p>
-                      </div>
-		    </div> -->
-		  </div> 
-                 <div class="row schedule-item">
+                    <span class="title">
+                      Family Crash Room
+                    </span>
+                  </div> 
+                  <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
-                      <span class="time">Afternoon</span>
-                      <span class="location">Mile High Ballroom 3-4</span>
+                      <span class="time">10:00am - 10:30pm</span>
+                      <span class="location">Mile High Ballroom Pre-Function</span>
                     </div>
-                    <div class="col-md-9 schedule-item-details">
-                      <div class="schedule-item-summary">
-                        <span class="title">
-                            Snacks 
-                        </span>
-                      </div>
-                      <div class="abstract">
-                        <p>Join us for light snacks in the afternoon.</p>
-                      </div>
+                    <span class="title">
+                      Morning Break
+                    </span>
+                  </div> 
+                  <div class="row schedule-item">
+                    <div class="col-md-3 schedule-item-slot">
+                      <span class="time">10:00am - 5:00pm</span>
+                      <span class="location">Room: 4a – 4b</span>
                     </div>
-                  </div>             
+                    <span class="title">
+                        GoBots with Hybrid Group
+                    </span>
+                  </div> 
+                  <div class="row schedule-item">
+                    <div class="col-md-3 schedule-item-slot">
+                      <span class="time">10:00am - 5:00pm</span>
+                      <span class="location">Room: 4c</span>
+                    </div>
+                    <span class="title">Docker</span>
+                  </div> 
+                  <div class="row schedule-item">
+                    <div class="col-md-3 schedule-item-slot">
+                      <span class="time">10:00am - 5:00pm</span>
+                      <span class="location">Room: 4d</span>
+                    </div>
+                    <span class="title">Go Compiler Team</span>
+                  </div> 
+                  <div class="row schedule-item">
+                    <div class="col-md-3 schedule-item-slot">
+                      <span class="time">10:00am - 5:00pm</span>
+                      <span class="location">Room: 4f</span>
+                    </div>
+                    <span class="title">Birds of a Feather</span>
+                  </div> 
+                  <div class="row schedule-item">
+                    <div class="col-md-3 schedule-item-slot">
+                      <span class="time">10:00am - 1:00pm</span>
+                      <span class="location">Room: 4e</span>
+                    </div>
+                    <span class="title">Apcera</span>
+                  </div> 
+                  <div class="row schedule-item">
+                    <div class="col-md-3 schedule-item-slot">
+                      <span class="time">12:30pm - 1:30pm</span>
+                      <span class="location">Mile High Ballroom Pre-Function</span>
+                    </div>
+                    <span class="title">Lunch Break</span>
+                  </div> 
+                  <div class="row schedule-item">
+                    <div class="col-md-3 schedule-item-slot">
+                      <span class="time">10:00am - 5:00pm</span>
+                      <span class="location">Room: 4e</span>
+                    </div>
+                    <span class="title">Go Team - Go Pain Points &amp; Dependency Management Discussions</span>
+                  </div> 
+                  <div class="row schedule-item">
+                    <div class="col-md-3 schedule-item-slot">
+                      <span class="time">3:00pm - 3:30pm</span>
+                      <span class="location">Mile High Ballroom Pre-Function</span>
+                    </div>
+                    <span class="title">Afternoon Break</span>
+                  </div> 
                 </div>
