Add sold out note to hotel block

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -362,6 +362,12 @@
                   </div>
 								</div>
 							</div> -->
+
+							<div class="col-md-4 col-sm-6">
+								<div class="info-box">
+                  All Properties are sold out.
+                </div>
+              </div>
 						</div>
 					</div>
 				</section>
