--- a/themes/gophercon/layouts/partials/schedule/13july.html
+++ b/themes/gophercon/layouts/partials/schedule/13july.html
@@ -49,13 +49,13 @@
                     </div>
                     <span class="title">Docker</span>
                   </div> 
-                  <div class="row schedule-item">
+                  <!-- <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">10:00am - 5:00pm</span>
                       <span class="location">Room: 4d</span>
                     </div>
                     <span class="title">Go Compiler Team</span>
-                  </div> 
+                    </div>  -->
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">10:00am - 5:00pm</span>
