Updates to hack day schedule

--- a/themes/gophercon/layouts/partials/schedule/13july.html
+++ b/themes/gophercon/layouts/partials/schedule/13july.html
@@ -39,8 +39,9 @@
                       <span class="location">Room: 4a – 4b</span>
                     </div>
                     <span class="title">
-                        GoBots with Hybrid Group
+                        GoBots and other flying objects
                     </span>
+                    <div class="abstract">Hybrid Group</div>
                   </div> 
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
@@ -49,19 +50,20 @@
                     </div>
                     <span class="title">Docker</span>
                   </div> 
-                  <!-- <div class="row schedule-item">
+                  <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">10:00am - 5:00pm</span>
                       <span class="location">Room: 4d</span>
                     </div>
-                    <span class="title">Go Compiler Team</span>
-                    </div>  -->
+                    <span class="title">Go Team</span>
+                  </div>
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">10:00am - 5:00pm</span>
                       <span class="location">Room: 4f</span>
                     </div>
-                    <span class="title">Birds of a Feather</span>
+                    <span class="title">Container Technologies</span>
+                    <div class="abstract">Hack on and discuss the various container technologies written in and powered by Go</div>
                   </div> 
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
@@ -79,10 +81,11 @@
                   </div> 
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
-                      <span class="time">10:00am - 5:00pm</span>
+                      <span class="time">2:00pm - 5:00pm</span>
                       <span class="location">Room: 4e</span>
                     </div>
-                    <span class="title">Go Team - Go Pain Points &amp; Dependency Management Discussions</span>
+                    <span class="title">Go Development with Vim-go</span>
+                    <div class="abstract">Fatih Arslan</div>
                   </div> 
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
