Remove a tonne of padding everywhere, reflow other grid items

--- a/themes/gophercon/layouts/partials/schedule/13july.html
+++ b/themes/gophercon/layouts/partials/schedule/13july.html
@@ -6,9 +6,7 @@
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
-                        <span class="title">
-                           Hack Day
-                        </span>
+                        <span class="title">Hack Day</span>
                       </div>
                       <div class="abstract">
                         <p>Join all your friends in a day of loosly organized collaboration, lightning talks, and general hackery.  We'll provide the space and the wifi, you bring your favorite project and work together with friends you only get to see in person every year at GopherCon.</p>
@@ -20,78 +18,92 @@
                       <span class="time">10:00am - 5:00pm</span>
                       <span class="location">Room: 302</span>
                     </div>
-                    <span class="title">
-                      Family Crash Room
-                    </span>
+                    <div class="col-md-9 schedule-item-details">
+                      <span class="title">Family Crash Room</span>
+		    </div>
                   </div> 
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">10:00am - 10:30pm</span>
                       <span class="location">Mile High Ballroom Pre-Function</span>
                     </div>
-                    <span class="title">
-                      Morning Break
-                    </span>
+                    <div class="col-md-9 schedule-item-details">
+                      <span class="title">Morning Break</span>
+		    </div>
                   </div> 
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">10:00am - 5:00pm</span>
                       <span class="location">Room: 4a – 4b</span>
                     </div>
-                    <span class="title">
-                        GoBots and other flying objects
-                    </span>
-                    <div class="abstract">Hybrid Group</div>
+                    <div class="col-md-9 schedule-item-details">
+                      <span class="title">GoBots and other flying objects</span>
+                      <div class="abstract">Hybrid Group</div>
+		    </div>
                   </div> 
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">10:00am - 5:00pm</span>
                       <span class="location">Room: 4c</span>
                     </div>
-                    <span class="title">Docker</span>
+                    <div class="col-md-9 schedule-item-details">
+                      <span class="title">Docker</span>
+		    </div>
                   </div> 
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">10:00am - 5:00pm</span>
                       <span class="location">Room: 4d</span>
                     </div>
-                    <span class="title">Go Team</span>
+                    <div class="col-md-9 schedule-item-details">
+                      <span class="title">Go Team</span>
+		    </div>
                   </div>
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">10:00am - 5:00pm</span>
                       <span class="location">Room: 4f</span>
                     </div>
-                    <span class="title">Container Technologies</span>
-                    <div class="abstract">Hack on and discuss the various container technologies written in and powered by Go</div>
+                    <div class="col-md-9 schedule-item-details">
+                      <span class="title">Container Technologies</span>
+                      <div class="abstract">Hack on and discuss the various container technologies written in and powered by Go</div>
+		    </div>
                   </div> 
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">10:00am - 1:00pm</span>
                       <span class="location">Room: 4e</span>
                     </div>
-                    <span class="title">Apcera</span>
+                    <div class="col-md-9 schedule-item-details">
+	              <span class="title">Apcera</span>
+		    </div>
                   </div> 
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">12:30pm - 1:30pm</span>
                       <span class="location">Mile High Ballroom Pre-Function</span>
                     </div>
-                    <span class="title">Lunch Break</span>
+                    <div class="col-md-9 schedule-item-details">
+                      <span class="title">Lunch Break</span>
+		    </div>
                   </div> 
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">2:00pm - 5:00pm</span>
                       <span class="location">Room: 4e</span>
                     </div>
-                    <span class="title">Go Development with Vim-go</span>
-                    <div class="abstract">Fatih Arslan</div>
+                    <div class="col-md-9 schedule-item-details">
+                      <span class="title">Go Development with Vim-go</span>
+                      <div class="abstract">Fatih Arslan</div>
+		    </div>
                   </div> 
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">3:00pm - 3:30pm</span>
                       <span class="location">Mile High Ballroom Pre-Function</span>
                     </div>
-                    <span class="title">Afternoon Break</span>
+                    <div class="col-md-9 schedule-item-details">
+                      <span class="title">Afternoon Break</span>
+		    </div>
                   </div> 
                 </div>
