--- a/themes/gophercon/layouts/partials/schedule/11july.html
+++ b/themes/gophercon/layouts/partials/schedule/11july.html
@@ -1,21 +1,21 @@
                 {{ $sessions := where (where .Site.Pages "Section" "sessions") "Params.sessionscheduled" "July 11th" }}
                 <div id="day1-schedule" class="tab-pane schedule-tab tab-pane-subtabs">
                   <ul class="nav nav-tabs">
-                    <li role="presentation" class="active">
+                    <li role="presentation">
                       <a data-toggle="tab" href="#general-schedule-11july">General</a>
                     </li>
-                    <li role="presentation" class="">
+                    <li role="presentation" class="active">
                       <a data-toggle="tab" href="#main-theater-11july">Main Theater</a>
                     </li>
-                    <li role="presentation" class="">
+                    <li role="presentation">
                       <a data-toggle="tab" href="#tutorial-1-11july">Room: 501-504</a>
                     </li>
-                    <li role="presentation" class="">
+                    <li role="presentation">
                       <a data-toggle="tab" href="#tutorial-2-11july">Room: 505-507</a>
                     </li>
                   </ul>
                   <div class="tab-content">
-                    <div id="general-schedule-11july" class="schedule-tab schedule-item-tab active tab-pane">
+                    <div id="general-schedule-11july" class="schedule-tab schedule-item-tab tab-pane">
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
                           <span class="time">08:00am - 6:00pm</span>
@@ -54,7 +54,7 @@
                         </div>
                       </div>
                     </div>
-                    <div id="main-theater-11july" class="schedule-tab schedule-item-tab tab-pane ">
+                    <div id="main-theater-11july" class="schedule-tab schedule-item-tab tactive ab-pane ">
                       {{ partial "schedule/intermission.html" (dict "purpose" "Welcome Gophers!" "sessiontime" "08:50am - 09:00am" )}}
 
                       {{ range $sessions }}
