Added generic "general" tab to hack day so it doesn't look different

--- a/themes/gophercon/layouts/partials/schedule/13july.html
+++ b/themes/gophercon/layouts/partials/schedule/13july.html
@@ -1,3 +1,10 @@
+                <div id="day3-schedule" class="tab-pane schedule-tab tab-pane-subtabs">
+	           <ul class="nav nav-tabs">
+	              <li role="presentation">
+	                 <a data-toggle="tab" href="#general-schedule-12july">General</a>
+	             </li>
+	           </ul>
+		</div>
                 <div id="hackday-schedule" class="tab-pane schedule-tab schedule-item-tab">
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
