Added lightning talk details and link to signup page

--- a/themes/gophercon/layouts/partials/navbar.html
+++ b/themes/gophercon/layouts/partials/navbar.html
@@ -40,6 +40,7 @@
                 <li><a class="inner-link" href="/schedule">Schedule</a></li>
                 <li><a class="inner-link" href="/speakers">Speakers</a></li>
                 <li><a class="inner-link" href="/sessions">Sessions</a></li>
+                <li><a class="inner-link" href="/lightning-talks">Lightning Talks</a></li>
               </ul>
             </li>
             <li class="has-dropdown">
