--- a/themes/gophercon/layouts/partials/schedule/11july.html
+++ b/themes/gophercon/layouts/partials/schedule/11july.html
@@ -54,7 +54,7 @@
                         </div>
                       </div>
                     </div>
-                    <div id="main-theater-11july" class="schedule-tab schedule-item-tab tactive ab-pane ">
+                    <div id="main-theater-11july" class="schedule-tab schedule-item-tab active tab-pane ">
                       {{ partial "schedule/intermission.html" (dict "purpose" "Welcome Gophers!" "sessiontime" "08:50am - 09:00am" )}}
 
                       {{ range $sessions }}
