website content updates

--- a/themes/gophercon/layouts/partials/schedule/10july.html
+++ b/themes/gophercon/layouts/partials/schedule/10july.html
@@ -29,26 +29,26 @@
                       </div>
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
-                          <span class="time">12:00am - 6:00pm</span>
-                          <span class="location">Exhibit Hall</span>
+                          <span class="time">1:00pm - 6:00pm</span>
+                          <span class="location">Dining Den</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
-                            <span class="title">Sponsor/Exhibitor Move-in</span>
+                            <span class="title">Exhibitors' Move-in</span>
                           </div>
                         </div>
                       </div>
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
-                          <span class="time">6:00pm</span>
+                          <span class="time">6:00pm - 10:00pm</span>
                           <span class="location">Wynkoop Brewing Company</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
-                            <span class="title">GopherCon 2016 Kickoff Party</span>
+                            <span class="title">GopherCon 2016 Kick-off Party</span>
                           </div>
                           <div class="abstract">
-                            <p>Join the Denver Go Meetup group to kickoff Gophercon 2016 in style! </p>
+                            <p>Join the Denver Go Meetup group to kick off Gophercon 2016 in style! </p>
                             <p><a href="http://www.meetup.com/Denver-Go-Language-User-Group/events/229341754/">Event Details</a></p>
                           </div>
                         </div>
@@ -64,7 +64,7 @@
                       </div>
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
-                          <span class="time">7:30am - 9:30am</span>
+                          <span class="time">8:00am - 9:30am</span>
                           <span class="location">500's Corridor</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
@@ -76,37 +76,35 @@
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
                           <span class="time">9:00am - 5:00pm</span>
-                          <span class="location">Room 501</span>
+                          <span class="location">Rooms 501 - 502</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
                             <span class="title">Ultimate Go Workshop</span>
                             <div class="speaker">
-                              <span class="name">TBD</span>
+                              <span class="name">William Kennedy</span>
                               <span class="designation">Ardan Labs</span>
                             </div>
                           </div>
                           <div class="abstract">
                             <p>If you are new to Go or have only been coding for less than a year, then this class is for you. Take a 7 hour tour of Go learning the specification, implementation and idioms to help make you a better Go developer. The class is going to be dense and fast paced. If you love the Go In Action book, this class makes it come to life. <br/><br/> Language Syntax<br/> Arrays, Slices and Maps<br/> Methods, Interfaces and Embedding<br/> Concurrency, Channels <br/><br/></p>
-                            <p>
-                              <strong>Teacher:</strong>TBD 
                           </div>
                         </div>
                       </div>
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
                           <span class="time">12:00pm - 1:00pm</span>
-                          <span class="location">Room 501</span>
+                          <span class="location">500s Corridor</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
-                            <span class="title">Break</span>
+                            <span class="title">Lunch Break</span>
                             <div class="speaker">
                               <span class="name">In-Room Lunch</span>
                             </div>
                           </div>
                           <div class="abstract">
-                            <p>Catered lunch will be provided in the training room. Beverage service will be continuous throughout the day.</p>
+                            <p>A catered lunch buffet will be provided in the corridor. Beverage service will be served continuously throughout the day in the workshop room.</p>
                           </div>
                         </div>
                       </div>
@@ -145,7 +143,7 @@
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
                           <span class="time">9:00am - 5pm</span>
-                          <span class="location">Room 503</span>
+                          <span class="location">Rooms 503 - 504</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
@@ -156,9 +154,7 @@
                             </div>
                           </div>
                           <div class="abstract">
-                            <p>If you are seasoned Go developer and have even worked on a project or two, then this class is for you. In the first part of the class you will take a deep dive into the io package of the standard library. Learn about all there is to know to effectively use the io package. In the second part of the class, we will show you a much of the Go tooling we can to help you understand and debug your programs. <br /><br /> IO Package from top to bottom<br /> pprof<br /> Benchmarking and performance<br /> Memory tracing and comparing<br /> GODEBUG<br /> go-fuzz<br /> Go execution tracer <br/><br/>  <p>
-                              <strong>Teacher:</strong>TBD 
-                              </p>
+                            <p>If you are seasoned Go developer and have even worked on a project or two, then this class is for you. In the first part of the class you will take a deep dive into the io package of the standard library. Learn about all there is to know to effectively use the io package. In the second part of the class, we will show you a much of the Go tooling we can to help you understand and debug your programs. <br /><br /> IO Package from top to bottom<br /> pprof<br /> Benchmarking and performance<br /> Memory tracing and comparing<br /> GODEBUG<br /> go-fuzz<br /> Go execution tracer <br/>
                            </div>
                         </div>
                       </div>
@@ -175,7 +171,7 @@
                             </div>
                           </div>
                           <div class="abstract">
-                            <p>Catered lunch will be provided in the training room. Beverage service will be continuous throughout the day.</p>
+                            <p>A catered lunch buffet will be provided in the corridor. Beverage service will be served continuously throughout the day in the workshop room.</p>
                           </div>
                         </div>
                       </div>
@@ -258,7 +254,7 @@
                             </div>
                           </div>
                           <div class="abstract">
-                            <p>Catered lunch will be provided in the training room. Beverage service will be continuous throughout the day.</p>
+                            <p>A catered lunch buffet will be provided in the corridor. Beverage service will be served continuously throughout the day in the workshop room.</p>
                           </div>
                         </div>
                       </div>
