--- a/themes/gophercon/layouts/partials/schedule/13july.html
+++ b/themes/gophercon/layouts/partials/schedule/13july.html
@@ -9,7 +9,7 @@
                   <div class="row schedule-item">
                     <div class="col-md-3 schedule-item-slot">
                       <span class="time">10:00am - 5:00pm</span>
-                      <span class="location">Mile High Ballroom 3-4</span>
+                      <span class="location">Mile High Ballroom</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
                       <div class="schedule-item-summary">
@@ -44,8 +44,8 @@
                       <span class="location">Room: 4a – 4b</span>
                     </div>
                     <div class="col-md-9 schedule-item-details">
-                      <span class="title">GoBots and other flying objects</span>
-                      <div class="abstract">Hybrid Group</div>
+                      <span class="title">GoBots and Other Flying Objects</span>
+                      <div class="abstract">The Hybrid Group</div>
 		    </div>
                   </div> 
                   <div class="row schedule-item">
