more workshop content updates

--- a/themes/gophercon/layouts/partials/schedule/10july.html
+++ b/themes/gophercon/layouts/partials/schedule/10july.html
@@ -99,9 +99,6 @@
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
                             <span class="title">Lunch Break</span>
-                            <div class="speaker">
-                              <span class="name">In-Room Lunch</span>
-                            </div>
                           </div>
                           <div class="abstract">
                             <p>A catered lunch buffet will be provided in the corridor. Beverage service will be served continuously throughout the day in the workshop room.</p>
@@ -131,7 +128,7 @@
                       </div>
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
-                          <span class="time">7:30am - 9:30am</span>
+                          <span class="time">8:00am - 9:30am</span>
                           <span class="location">500's Corridor</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
@@ -142,7 +139,7 @@
                       </div>
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
-                          <span class="time">9:00am - 5pm</span>
+                          <span class="time">9:00am - 5:00pm</span>
                           <span class="location">Rooms 503 - 504</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
@@ -165,10 +162,7 @@
                         </div>
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
-                            <span class="title">Break</span>
-                            <div class="speaker">
-                              <span class="name">In-Room Lunch</span>
-                            </div>
+                            <span class="title">Lunch Break</span>
                           </div>
                           <div class="abstract">
                             <p>A catered lunch buffet will be provided in the corridor. Beverage service will be served continuously throughout the day in the workshop room.</p>
@@ -200,7 +194,7 @@
                       </div>
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
-                          <span class="time">7:30am - 9:30am</span>
+                          <span class="time">8:00am - 9:30am</span>
                           <span class="location">500's Corridor</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
@@ -248,10 +242,7 @@
                         </div>
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
-                            <span class="title">Break</span>
-                            <div class="speaker">
-                              <span class="name">In-Room Lunch</span>
-                            </div>
+                            <span class="title">Lunch Break</span>
                           </div>
                           <div class="abstract">
                             <p>A catered lunch buffet will be provided in the corridor. Beverage service will be served continuously throughout the day in the workshop room.</p>
